--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,7 +45,7 @@ main {
     div {
       padding: 0rem 20vw;
       //width: 70vw;
-      display: table-cell;
+      //display: table-cell;
       vertical-align: middle;
     }
 
@@ -87,3 +87,4 @@ main {
 @import "flight";
 @import "medz";
 @import "advizors";
+@import "mobile";
