--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -87,8 +87,7 @@
   }
   //HomePage-------------------------------------------------------------
   main {
-    //align-items: center;
-    //text-align: center;
+    padding: 4rem 2rem;
     &#home {
       div {
         padding: 0px;
